changed container-fluid hierarchy to test formatting issue

--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -108,7 +108,7 @@ html(lang="en")
 									span.visible-xs.visible-sm Login
 
 			//- BODY
-		#body: .container-fluid: .wrapper
+		#body: .container-fluid.wrapper
 
 			//- NOTE:
 			//- There is no .container wrapping class around body blocks to allow more flexibility in design.
@@ -126,7 +126,7 @@ html(lang="en")
 
 		//
 			FOOTER
-		.container-fluid: #footer.wrapper
+		#footer: .container-fluid.wrapper
 			footer
 				.container
 					.row
