took out margin: 0 on container-fluid class to fix formatting issues on chrome mobile

--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -79,7 +79,7 @@ html(lang="en")
 						a(href='http://www.aps.edu/' target='_blank') Albuquerque Public Schools
 				.sidebar__logo
 					| Ask the Principal
-		#header: .container-fluid
+		#header
 			div(role="navigation")
 				nav.navbar.navbar-default.js-navbar-top.js-toggleClass.navbar-fixed-top
 					.navbar-header
@@ -108,7 +108,7 @@ html(lang="en")
 									span.visible-xs.visible-sm Login
 
 			//- BODY
-		#body: .container-fluid.wrapper
+		#body: .wrapper
 
 			//- NOTE:
 			//- There is no .container wrapping class around body blocks to allow more flexibility in design.
@@ -126,7 +126,7 @@ html(lang="en")
 
 		//
 			FOOTER
-		#footer: .container-fluid.wrapper
+		#footer: .wrapper
 			footer
 				.container
 					.row
