--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -8,13 +8,12 @@ body {
 	width: 100%;
 }
 
-// #body {
-// 	width: 100%;
-// }
+#body {
+	width: 100%;
+}
 
 // Optional
 .container-fluid {
-	margin: 0px;
 	padding: 0px;
 }
 //
@@ -256,7 +255,7 @@ body {
 //   }
 // }
 .hero__heading {
-	font-size: 67px;
+	font-size: 55px;
 }
 // .hero__btn.btn-link {
 //   color: rgba(255, 255, 255, 0.9);
