--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -1,7 +1,7 @@
 extends ../layouts/default
 
 block content
-	.container-fluid: .container-fluid
+	.container-fluid
 		img(src="../images/tga_header_large.png", alt="The Great Academy").img-responsive.visible-sm.visible-xs
 		img(src='/images/stretch-bg.png').center-block.col-sm-height.img-responsive.visible-md.visible-lg
 
@@ -19,7 +19,9 @@ block content
 					//- a.hero__btn.btn.btn-lg.btn-primary.animated.fadeInUp.delay_2(href='#') Primary action
 					//- a.hero__btn.btn.btn-lg.btn-link.animated.fadeInUp.delay_2(href='#about') Find out more
 	.container-fluid: .jumbotron.index-bg
-		h1.hero__heading.animated.fadeInUp.delay_20.visible-xs.text-center Ask The Principal
+		.row
+			.col-xs-12
+				h1.hero__heading.animated.fadeInUp.delay_20.visible-xs.text-center Ask The Principal
 		.row
 			.row-same-height
 				.col-sm-6.col-lg-4
