--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -101,7 +101,7 @@ html(lang="en")
 							li 
 								a(href='http://thegreatacademy.org/' target='_blank') The GREAT Academy
 							li 
-								a(href="http://thegreatacademy.org/teachers/family-resources-2/available-scholarships/" target="_blank") Sponsorship
+								a(href="/images/ATP-sponsorship-packet.pdf" target='_blank') Sponsorship
 							li
 								a.js-toggle-sidebar(href='#')
 									span.oi.oi-menu.visible-md.visible-lg.sidebar-toggle
@@ -130,13 +130,14 @@ html(lang="en")
 			footer
 				.container
 					.row
-						.col-xs-12.col-sm-4.col-middle
+						.col-xs-4.col-middle
 							| © The GREAT Academy
-						.col-xs-12.col-sm-4.col-middle
+						.col-xs-4.col-middle
 							a(href="http://thegreatacademy.org/foundation/" target="_blank") 
 								img(src="../images/tga_logo_footer.png", alt="The Great Academy Seal").center-block.img-responsive
-						.col-xs-12.col-sm-4.col-middle
+						.col-xs-4.col-middle
 							.footer__social Connect with us:  
+								br
 								a.footer-social__link.footer-social__link_twitter(href='https://twitter.com/TheGREATAcademy' target="_blank")
 									i.fa.fa-twitter
 								a.footer-social__link.footer-social__link_facebook(href='https://www.facebook.com/thegreatacademy/' target="_blank")
