--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -3,7 +3,7 @@ extends ../layouts/default
 block content
 	//- Top Header Section
 	.container-fluid
-		img(src="../images/tga_header_large.png", alt="The Great Academy").img-responsive.visible-sm.visible-xs
+		img(src="../images/tga_header_medium.png", alt="The Great Academy").img-responsive.visible-sm.visible-xs
 		img(src='/images/stretch-bg.png').center-block.col-sm-height.img-responsive.visible-md.visible-lg
 
 	//- Main Intro Section
@@ -91,7 +91,7 @@ block content
 			.row
 				.col-md-10.col-md-offset-1
 					.row
-						.col-xs-6.col-sm-4
+						.col-sm-4
 							.team__item
 								.team-item__img
 									img.img-responsive(src='img/team_1.jpg', alt='...')
@@ -106,7 +106,7 @@ block content
 											a.team-item-contact__link.team-item-contact__link_facebook(href='#')
 												i.fa.fa-facebook
 											.clearfix
-						.col-xs-6.col-sm-4
+						.col-sm-4
 							.team__item
 								.team-item__img
 									img.img-responsive(src='img/team_2.jpg', alt='...')
@@ -121,7 +121,7 @@ block content
 											a.team-item-contact__link.team-item-contact__link_facebook(href='#')
 												i.fa.fa-facebook
 											.clearfix
-						.col-xs-6.col-sm-4
+						.col-sm-4
 							.team__item
 								.team-item__img
 									img.img-responsive(src='img/team_3.jpg', alt='...')
@@ -136,7 +136,7 @@ block content
 											a.team-item-contact__link.team-item-contact__link_facebook(href='#')
 												i.fa.fa-facebook
 											.clearfix
-						.col-xs-6.col-sm-4.visible-xs
+						.col-sm-4.visible-xs
 							.team__item
 								.team-item__img
 									img.img-responsive(src='img/team_1.jpg', alt='...')
