changed hero banner, optimized some images, commented out sections under development and added pdf sponsorship link

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -272,7 +272,7 @@ body {
 }
 /* Hero :: Agency */
 .hero_agency {
-  background-image: url(../images/school-small.jpg);
+  background-image: url(../images/tga_group.jpg);
 	background-repeat: no-repeat;
 	text-align: center;
 }
@@ -533,7 +533,7 @@ footer a {
 @media (max-width: @screen-xs-min) {
 	#footer {
 		background-color: #fff;
-		height: 220px;
+		height: 165px;
 	}
 
 	// .index-bg {
