--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -72,82 +72,86 @@ block content
 					h1.heading.hero__heading.animated.fadeInUp.delay_20 Ask The Principal
 					br
 					// Hero subheading
-					p.heading__sub.hero-heading__sub.animated.fadeInUp.delay_40
-						| Ask The Principal is a radio show dedicated to opening a dialogue on all aspects of modern education.	
+					h4.heading__sub.hero-heading__sub.animated.fadeInUp.delay_40
+						| Ask The Principal is a radio show dedicated to discussing important topics in Education.
 						br
 						br
-						|	We will discuss all the mercurial challenges of education, and the best tools to address them, including the Personalized and Blended Learning models.
-
-	//- About Us Section
-	#team
-		.container-fluid
-			.row
-				.col-xs-12
-					h3.text-center Meet the team behind the talk
-					p.heading__sub
-						| Donec blandit ex vitae lectus malesuada ullamcorper. Praesent tempor pharetra leo, id mollis.
+						| Jasper and Keisha Matthews are the founders of The GREAT Academy charter school located in Albuquerque, New Mexico. The GREAT Academy is a FREE Public Charter School for grades 6 – 12. This school embraces a unique, one-of-a-kind, business-school model. The mission of the school is to ensure that students:
 						br
-						|	Aliquam at venenatis velit. Praesent tincidunt aliquet lectus, et auctor ex.
-			.row
-				.col-md-10.col-md-offset-1
-					.row
-						.col-sm-4
-							.team__item
-								.team-item__img
-									img.img-responsive(src='img/team_1.jpg', alt='...')
-								.row
-									.col-md-6
-										.team-item__name Jasper Matthews M.Ed.
-										.team-item__position Host/Executive Producer
-									.col-md-6
-										.team-item__contact
-											a.team-item-contact__link(href='#')
-												i.fa.fa-twitter
-											a.team-item-contact__link.team-item-contact__link_facebook(href='#')
-												i.fa.fa-facebook
-											.clearfix
-						.col-sm-4
-							.team__item
-								.team-item__img
-									img.img-responsive(src='img/team_2.jpg', alt='...')
-								.row
-									.col-md-6
-										.team-item__name Keisha Matthews M.Ed.
-										.team-item__position Host/Executive Producer
-									.col-md-6
-										.team-item__contact
-											a.team-item-contact__link(href='#')
-												i.fa.fa-twitter
-											a.team-item-contact__link.team-item-contact__link_facebook(href='#')
-												i.fa.fa-facebook
-											.clearfix
-						.col-sm-4
-							.team__item
-								.team-item__img
-									img.img-responsive(src='img/team_3.jpg', alt='...')
-								.row
-									.col-md-6
-										.team-item__name Danielle Provo
-										.team-item__position Producer
-									.col-md-6
-										.team-item__contact
-											a.team-item-contact__link(href='#')
-												i.fa.fa-twitter
-											a.team-item-contact__link.team-item-contact__link_facebook(href='#')
-												i.fa.fa-facebook
-											.clearfix
-						.col-sm-4.visible-xs
-							.team__item
-								.team-item__img
-									img.img-responsive(src='img/team_1.jpg', alt='...')
-								.row
-									.col-md-6
-										.team-item__name Denise Garcia
-										.team-item__position Producer
-									.col-md-6
-										.team-item__contact
-											a.team-item-contact__link(href='#')
-												i.fa.fa-twitter
-											a.team-item-contact__link.team-item-contact__link_facebook(href='#')
-												i.fa.fa-facebook
-											.clearfix
+						| Gain Real-world Experience through Active Transition
+						br
+						br
+						a(href="/images/ATP-sponsorship-packet.pdf" target='_blank').btn.btn-lg.btn-primary Become a sponsor
+	//- //- About Us Section
+	//- #team
+	//- 	.container-fluid
+	//- 		.row
+	//- 			.col-xs-12
+	//- 				h3.text-center Meet the team behind the talk
+	//- 				p.heading__sub
+	//- 					| Donec blandit ex vitae lectus malesuada ullamcorper. Praesent tempor pharetra leo, id mollis.
+	//- 					br
+	//- 					|	Aliquam at venenatis velit. Praesent tincidunt aliquet lectus, et auctor ex.
+	//- 		.row
+	//- 			.col-md-10.col-md-offset-1
+	//- 				.row
+	//- 					.col-sm-6
+	//- 						.team__item
+	//- 							.team-item__img
+	//- 								img.btn-block.img-responsive(src='img/team_1.jpg', alt='...')
+	//- 							.row
+	//- 								.col-md-6
+	//- 									.team-item__name Jasper Matthews M.Ed.
+	//- 									.team-item__position Host/Executive Producer
+	//- 								.col-md-6
+	//- 									.team-item__contact
+	//- 										a.team-item-contact__link(href='#')
+	//- 											i.fa.fa-twitter
+	//- 										a.team-item-contact__link.team-item-contact__link_facebook(href='#')
+	//- 											i.fa.fa-facebook
+	//- 										.clearfix
+	//- 					.col-sm-6
+	//- 						.team__item
+	//- 							.team-item__img
+	//- 								img.btn-block.img-responsive(src='img/team_2.jpg', alt='...')
+	//- 							.row
+	//- 								.col-md-6
+	//- 									.team-item__name Keisha Matthews M.Ed.
+	//- 									.team-item__position Host/Executive Producer
+	//- 								.col-md-6
+	//- 									.team-item__contact
+	//- 										a.team-item-contact__link(href='#')
+	//- 											i.fa.fa-twitter
+	//- 										a.team-item-contact__link.team-item-contact__link_facebook(href='#')
+	//- 											i.fa.fa-facebook
+	//- 										.clearfix
+	//- 					.col-sm-6
+	//- 						.team__item
+	//- 							.team-item__img
+	//- 								img.btn-block.img-responsive(src='img/team_3.jpg', alt='...')
+	//- 							.row
+	//- 								.col-md-6
+	//- 									.team-item__name Danielle Provo
+	//- 									.team-item__position Producer
+	//- 								.col-md-6
+	//- 									.team-item__contact
+	//- 										a.team-item-contact__link(href='#')
+	//- 											i.fa.fa-twitter
+	//- 										a.team-item-contact__link.team-item-contact__link_facebook(href='#')
+	//- 											i.fa.fa-facebook
+	//- 										.clearfix
+	//- 					.col-sm-6
+	//- 						.team__item
+	//- 							.team-item__img
+	//- 								img.btn-block.img-responsive(src='img/team_1.jpg', alt='...')
+	//- 							.row
+	//- 								.col-md-6
+	//- 									.team-item__name Denise Garcia
+	//- 									.team-item__position Producer
+	//- 								.col-md-6
+	//- 									.team-item__contact
+	//- 										a.team-item-contact__link(href='#')
+	//- 											i.fa.fa-twitter
+	//- 										a.team-item-contact__link.team-item-contact__link_facebook(href='#')
+	//- 											i.fa.fa-facebook
+	//- 										.clearfix
