fixed sizing in hero

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -67,7 +67,7 @@ block content
 	.hero.hero_agency
 		.container-fluid
 			.row
-				.col-xs-12
+				.col-xs-10.col-xs-offset-1
 					// Hero heading
 					h1.heading.hero__heading.animated.fadeInUp.delay_20 Ask The Principal
 					br
