changed great acronym

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -78,7 +78,17 @@ block content
 						br
 						| Jasper and Keisha Matthews are the founders of The GREAT Academy charter school located in Albuquerque, New Mexico. The GREAT Academy is a FREE Public Charter School for grades 6 – 12. This school embraces a unique, one-of-a-kind, business-school model. The mission of the school is to ensure that students:
 						br
-						| Gain Real-world Experience through Active Transition
+						br
+						span(style='font-size: 2em') G
+						| ain 
+						span(style='font-size: 2em') R
+						| eal-world 
+						span(style='font-size: 2em') E
+						| xperience through 
+						span(style='font-size: 2em') A
+						| ctive 
+						span(style='font-size: 2em') T
+						| ransition
 						br
 						br
 						a(href="/images/ATP-sponsorship-packet.pdf" target='_blank').btn.btn-lg.btn-primary Become a sponsor
