test for mobile layout, took out .wrapper styles

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -18,7 +18,6 @@ body {
 	width: 100%;
 }
 
-
 // Optional Bootstrap overrides
 .container-fluid {
 	margin: 0px;
@@ -28,7 +27,8 @@ body {
 .jumbotron {
 	margin-bottom: 0px;
 }
-//
+
+//Index Styles
 .index-bg {
 	background-image: url('../images/website_bg1.jpg');
 	background-repeat: no-repeat;
@@ -83,10 +83,7 @@ body {
  * Sidebar
  */
 .wrapper {
-  box-shadow: 10px 0 10px rgba(0, 0, 0, 0);
-  -webkit-transition: margin 0.5s;
-  -o-transition: margin 0.5s;
-  transition: margin 0.5s;
+
 }
 .js-wrapper-aside {
   margin-left: -220px;
