--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -92,16 +92,14 @@ block content
 						br
 						br
 						a(href="/images/ATP-sponsorship-packet.pdf" target='_blank').btn.btn-lg.btn-primary Become a sponsor
-	//- //- About Us Section
+	//- About Us Section
 	//- #team
 	//- 	.container-fluid
 	//- 		.row
 	//- 			.col-xs-12
 	//- 				h3.text-center Meet the team behind the talk
-	//- 				p.heading__sub
-	//- 					| Donec blandit ex vitae lectus malesuada ullamcorper. Praesent tempor pharetra leo, id mollis.
-	//- 					br
-	//- 					|	Aliquam at venenatis velit. Praesent tincidunt aliquet lectus, et auctor ex.
+	//- 				//- p.heading__sub
+	//- 
 	//- 		.row
 	//- 			.col-md-10.col-md-offset-1
 	//- 				.row
