another test for mobile formatting

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -18,8 +18,9 @@ body {
 	width: 100%;
 }
 
+
 // Optional Bootstrap overrides
-.container-fluid {
+.margin-collapse {
 	margin: 0px;
 	padding: 0px;
 }
@@ -83,7 +84,10 @@ body {
  * Sidebar
  */
 .wrapper {
-
+  box-shadow: 10px 0 10px rgba(0, 0, 0, 0);
+  -webkit-transition: margin 0.5s;
+  -o-transition: margin 0.5s;
+  transition: margin 0.5s;
 }
 .js-wrapper-aside {
   margin-left: -220px;
