--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -104,107 +104,107 @@ body {
 /**
  * Sidebar general
  */
-// .sidebar {
-//   position: fixed;
-//   top: 0;
-//   right: -220px;
-//   width: 220px;
-//   height: 100%;
-//   overflow-x: hidden;
-//   overflow-y: auto;
-//   background-image: -webkit-linear-gradient(top, #325776 0%, #355c7d 100%);
-//   background-image: -o-linear-gradient(top, #325776 0%, #355c7d 100%);
-//   background-image: linear-gradient(to bottom, #325776 0%, #355c7d 100%);
-//   background-repeat: repeat-x;
-//   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff325776', endColorstr='#ff355c7d', GradientType=0);
-//   -webkit-transition: all 0.5s;
-//   -o-transition: all 0.5s;
-//   transition: all 0.5s;
-// }
-// .js-sidebar-aside {
-//   right: 0;
-// }
-// .sidebar__wrapper {
-//   position: relative;
-//   min-height: 100%;
-//   height: auto;
-//   padding-top: 10px;
-//   padding-bottom: 90px;
-// }
-// .sidebar__close {
-//   position: absolute;
-//   top: 0;
-//   right: 0;
-//   width: 40px;
-//   padding: 10px;
-//   text-align: center;
-//   line-height: 20px;
-//   color: rgba(255, 255, 255, 0.6);
-//   cursor: pointer;
-// }
-// .sidebar__heading {
-//   margin: 30px 25px 20px;
-//   font-size: 13px;
-//   font-weight: 700;
-//   color: #c06c84;
-//   text-transform: uppercase;
-//   overflow: hidden;
-//   text-overflow: ellipsis;
-//   white-space: nowrap;
-// }
-// /**
-//  * Sidebar form
-//  */
-// .sidebar__form {
-//   padding: 30px 25px 20px;
-// }
-//
-// .sidebar__btn {
-// 	background-color: #c06c84;
-// 	color: #FFF;
-// }
-// /**
-//  * Sidebar menu
-//  */
-// .sidebar__menu {
-//   list-style: none;
-//   padding: 0;
-//   margin: 0;
-// }
-// .sidebar__menu > li > a {
-//   display: block;
-//   padding: 4px 25px;
-//   font-weight: 600;
-//   color: rgba(255, 255, 255, 0.7);
-//   text-decoration: none;
-//   overflow: hidden;
-//   text-overflow: ellipsis;
-//   white-space: nowrap;
-//   -webkit-transition: color 0.15s;
-//   -o-transition: color 0.15s;
-//   transition: color 0.15s;
-// }
-// .sidebar__menu > li > a:hover,
-// .sidebar__menu > li > a:focus {
-//   color: white;
-// }
-// /**
-//  * Sidebar logo
-//  */
-// .sidebar__logo {
-//   position: absolute;
-//   bottom: 0;
-//   left: 0;
-//   right: 0;
-//   padding: 20px 25px;
-//   text-align: center;
-//   font-size: 18px;
-//   font-weight: 600;
-//   color: rgba(255, 255, 255, 0.1);
-//   overflow: hidden;
-//   text-overflow: ellipsis;
-//   white-space: nowrap;
-// }
+.sidebar {
+  position: fixed;
+  top: 0;
+  right: -220px;
+  width: 220px;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  background-image: -webkit-linear-gradient(top, #325776 0%, #355c7d 100%);
+  background-image: -o-linear-gradient(top, #325776 0%, #355c7d 100%);
+  background-image: linear-gradient(to bottom, #325776 0%, #355c7d 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff325776', endColorstr='#ff355c7d', GradientType=0);
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.js-sidebar-aside {
+  right: 0;
+}
+.sidebar__wrapper {
+  position: relative;
+  min-height: 100%;
+  height: auto;
+  padding-top: 10px;
+  padding-bottom: 90px;
+}
+.sidebar__close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40px;
+  padding: 10px;
+  text-align: center;
+  line-height: 20px;
+  color: rgba(255, 255, 255, 0.6);
+  cursor: pointer;
+}
+.sidebar__heading {
+  margin: 30px 25px 20px;
+  font-size: 13px;
+  font-weight: 700;
+  color: #c06c84;
+  text-transform: uppercase;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+/**
+ * Sidebar form
+ */
+.sidebar__form {
+  padding: 30px 25px 20px;
+}
+
+.sidebar__btn {
+	background-color: #c06c84;
+	color: #FFF;
+}
+/**
+ * Sidebar menu
+ */
+.sidebar__menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.sidebar__menu > li > a {
+  display: block;
+  padding: 4px 25px;
+  font-weight: 600;
+  color: rgba(255, 255, 255, 0.7);
+  text-decoration: none;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  -webkit-transition: color 0.15s;
+  -o-transition: color 0.15s;
+  transition: color 0.15s;
+}
+.sidebar__menu > li > a:hover,
+.sidebar__menu > li > a:focus {
+  color: white;
+}
+/**
+ * Sidebar logo
+ */
+.sidebar__logo {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 20px 25px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+  color: rgba(255, 255, 255, 0.1);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 /* Same height columns */
 .row-same-height {
   display: table;
