took out margin collapse test

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -20,10 +20,10 @@ body {
 
 
 // Optional Bootstrap overrides
-.margin-collapse {
-	margin: 0px;
-	padding: 0px;
-}
+// .margin-collapse {
+// 	margin: 0px;
+// 	padding: 0px;
+// }
 
 .jumbotron {
 	margin-bottom: 0px;
