--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -2,12 +2,12 @@ extends ../layouts/default
 
 block content
 	//- Top Header Section
-	.container-fluid.margin-collapse
+	.container
 		img(src="../images/tga_header_medium.png", alt="The Great Academy").img-responsive.visible-sm.visible-xs
 		img(src='/images/stretch-bg.png').center-block.col-sm-height.img-responsive.visible-md.visible-lg
 
 	//- Main Intro Section
-	.container-fluid.margin-collapse 
+	.container 
 		.jumbotron.index-bg
 			.row
 				.col-xs-12
@@ -66,7 +66,7 @@ block content
 
 	//- Hero Divider Section 
 	.hero.hero_agency
-		.container-fluid
+		.container
 			.row
 				.col-xs-10.col-xs-offset-1
 					// Hero heading
@@ -95,7 +95,7 @@ block content
 						a(href="/images/ATP-sponsorship-packet.pdf" target='_blank').btn.btn-lg.btn-primary Become a sponsor
 	//- About Us Section
 	//- #team
-	//- 	.container-fluid
+	//- 	.container
 	//- 		.row
 	//- 			.col-xs-12
 	//- 				h3.text-center Meet the team behind the talk
