--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -2,16 +2,15 @@ extends ../layouts/default
 
 block content
 	//- Top Header Section
-	.container
+	.container-fluid.margin-collapse
 		img(src="../images/tga_header_medium.png", alt="The Great Academy").img-responsive.visible-sm.visible-xs
 		img(src='/images/stretch-bg.png').center-block.col-sm-height.img-responsive.visible-md.visible-lg
 
 	//- Main Intro Section
-	.container 
+	.container-fluid.margin-collapse 
 		.jumbotron.index-bg
 			.row
-				.col-xs-12
-					h1.hero__heading.animated.fadeInUp.delay_20.visible-xs.text-center Ask The Principal
+				h1.hero__heading.animated.fadeInUp.delay_20.visible-xs.text-center Ask The Principal
 			.row
 				.row-same-height
 					.col-sm-6.col-lg-4
@@ -66,7 +65,7 @@ block content
 
 	//- Hero Divider Section 
 	.hero.hero_agency
-		.container
+		.container-fluid
 			.row
 				.col-xs-10.col-xs-offset-1
 					// Hero heading
@@ -95,7 +94,7 @@ block content
 						a(href="/images/ATP-sponsorship-packet.pdf" target='_blank').btn.btn-lg.btn-primary Become a sponsor
 	//- About Us Section
 	//- #team
-	//- 	.container
+	//- 	.container-fluid
 	//- 		.row
 	//- 			.col-xs-12
 	//- 				h3.text-center Meet the team behind the talk
