--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -1,12 +1,12 @@
-html {
-  position: relative;
-  min-height: 100%;
-}
+// html {
+//   position: relative;
+//   min-height: 100%;
+// }
 
 body {
 	background-image: url('../images/website-bg-white-small.png');
 	background-repeat: no-repeat;
-	margin-bottom: 220px;
+	// margin-bottom: 220px;
 }
 
 #header {
@@ -16,6 +16,7 @@ body {
 
 #body {
 	width: 100%;
+	margin: 0px;
 }
 
 
@@ -475,7 +476,7 @@ body {
 
 // Footer
 #footer {
-	position: absolute;
+	// position: absolute;
 	height: 220px;
 	bottom: 0px;
 	margin-top: 30px;
