float bottom footer styles

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -1,12 +1,12 @@
-// html {
-//   position: relative;
-//   min-height: 100%;
-// }
+html {
+  position: relative;
+  min-height: 100%;
+}
 
 body {
 	background-image: url('../images/website-bg-white-small.png');
 	background-repeat: no-repeat;
-	margin: 0px;
+	margin-bottom: 220px;
 }
 
 #header {
@@ -475,7 +475,7 @@ body {
 
 // Footer
 #footer {
-	// position: absolute;
+	position: absolute;
 	height: 220px;
 	bottom: 0px;
 	margin-top: 30px;
