test .wrapper 100% width

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -80,6 +80,7 @@ body {
  * Sidebar
  */
 .wrapper {
+	width: 100%;
   box-shadow: 10px 0 10px rgba(0, 0, 0, 0);
   -webkit-transition: margin 0.5s;
   -o-transition: margin 0.5s;
