over-ride bootstrap defaults to fix mobile formatting issue

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -21,12 +21,16 @@ body {
 
 // Optional Bootstrap overrides
 .margin-collapse {
-	margin: 0px;
+	width: 100%;
 	padding: 0px;
 }
 
 .jumbotron {
 	margin-bottom: 0px;
+}
+
+.container .jumbotron {
+	border-radius: 0px;
 }
 
 //Index Styles
