over-ride bootstrap default.container to fix mobile formatting issue

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -20,7 +20,7 @@ body {
 
 
 // Optional Bootstrap overrides
-.margin-collapse {
+.container {
 	width: 100%;
 	padding: 0px;
 }
@@ -39,6 +39,11 @@ body {
 	background-repeat: no-repeat;
 }
 
+// General Templates Styles
+
+.add-padding {
+	padding: 15px;
+}
 
 
 /**
