changed back .container styling

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -22,7 +22,6 @@ body {
 // Optional Bootstrap overrides
 .container {
 	width: 100%;
-	padding: 0px;
 }
 
 .jumbotron {
@@ -41,8 +40,8 @@ body {
 
 // General Templates Styles
 
-.add-padding {
-	padding: 15px;
+.no-padding {
+	padding: 0px;
 }
 
 
