--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -2,12 +2,12 @@ extends ../layouts/default
 
 block content
 	//- Top Header Section
-	.container.margin-collapse
+	.container.no-padding
 		img(src="../images/tga_header_medium.png", alt="The Great Academy").img-responsive.visible-sm.visible-xs
 		img(src='/images/stretch-bg.png').center-block.col-sm-height.img-responsive.visible-md.visible-lg
 
 	//- Main Intro Section
-	.container.margin-collapse 
+	.container.no-padding
 		.jumbotron.index-bg
 			.row
 				h1.hero__heading.animated.fadeInUp.delay_20.visible-xs.text-center Ask The Principal
