--- a/templates/views/gallery.jade
+++ b/templates/views/gallery.jade
@@ -1,11 +1,11 @@
 extends ../layouts/default
 
 block intro
-	.container.add-padding
+	.container
 		h1 Gallery
 	
 block content
-	.container.add-padding
+	.container
 		if galleries.length
 			each gallery in galleries
 				h2= gallery.name
