changed body background image

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -4,8 +4,9 @@ html {
 }
 
 body {
-	background-image: url('../images/website-bg-white-small.png');
+	background-image: url('../images/website-bg-white-small2.png');
 	background-repeat: no-repeat;
+	background-size: cover;
 	margin-bottom: 220px;
 }
 
