--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -29,7 +29,7 @@ html(lang="en")
 
 		//- This file provides the default styling for the KeystoneJS Content Editor
 		if user && user.canAccessKeystone
-			link(href="/styles/site.min.css", rel="stylesheet")
+			link(href="/keystone/styles/content/editor.min.css", rel="stylesheet")
 			//- link(href="/keystone/styles/content/editor.min.css", rel="stylesheet")
 
 		//- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
