fixed formatting issue, changed footer styles

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -1,13 +1,13 @@
-html {
-  position: relative;
-  min-height: 100%;
-}
+// html {
+//   position: relative;
+//   min-height: 100%;
+// }
 
 body {
 	background-image: url('../images/website-bg-white-small2.png');
 	background-repeat: no-repeat;
 	background-size: cover;
-	margin-bottom: 220px;
+	// margin-bottom: 220px;
 }
 
 #header {
@@ -485,10 +485,10 @@ body {
 
 // Footer
 #footer {
-	position: absolute;
-	height: 220px;
+	// position: absolute;
+	// height: 220px;
 	bottom: 0px;
-	margin-top: 30px;
+	// margin-top: 30px;
 	border-top: 1px solid @gray-light;
 	padding-top: 30px;
 	color: @gray-light;
