--- a/public/styles/bootstrap/modals.less
+++ b/public/styles/bootstrap/modals.less
@@ -14,7 +14,7 @@
 
 // Container that the modal scrolls within
 .modal {
-  display: none;
+  // display: none;
   overflow: hidden;
   position: fixed;
   top: 0;
