--- a/templates/views/contact.jade
+++ b/templates/views/contact.jade
@@ -10,7 +10,7 @@ block content
 			h3 Thanks for getting in touch.
 		else
 			.row: .col-sm-8.col-md-6
-				form(method='post')
+				form(method='post')#form
 					input(type='hidden', name='action', value='contact')
 					.form-group(class=validationErrors.name ? 'has-error' : null)
 						label Name
@@ -30,5 +30,7 @@ block content
 					.form-group(class=validationErrors.message ? 'has-error' : null)
 						label What would you like to ask the Principal?
 						textarea(name='message', placeholder='Leave us a message...' rows=4).form-control= formData.message
+					.form-group
+						input(type="hidden", name="_next", value="/success")
 					.form-actions
 						button(type='submit').btn.btn-primary Send
