reset everything and update to keystone 0.3.4

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -33,6 +33,19 @@ body {
 	border-radius: 0px;
 }
 
+.carousel {
+	position: initial;
+}
+
+.carousel-inner > .item > img {
+    margin: 0 auto;
+}
+
+// owl-wrapper
+.owl-wrapper {
+	width: 100%;
+}
+
 //Index Styles
 .index-bg {
 	background-image: url('../images/website_bg1.jpg');
@@ -45,6 +58,9 @@ body {
 	padding: 0px;
 }
 
+.padding {
+	padding: 10px;
+}
 
 /**
  * Navbar general
@@ -234,6 +250,7 @@ body {
 	vertical-align: middle;
 	float: none;
 }
+
 // Heading
 .heading__sub {
   text-align: center;
