--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -14,8 +14,9 @@ html(lang="en")
 		link(rel="shortcut icon", href="/images/favicon-tga.ico", type="image/x-icon")
 		
 		// CSS Plugins
+		//- link(href='/styles/owl.carousel.min.css', rel='stylesheet')
+		//- link(href='/styles/owl.theme.default.css', rel='stylesheet')
 		link(href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css', rel='stylesheet')
-		link(href='https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css', rel='stylesheet')
 		link(href='https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css', rel='stylesheet')
 		link(href='https://cdn.jsdelivr.net/open-iconic/1.1.0/font/css/open-iconic-bootstrap.min.css', rel='stylesheet')
 		link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css', rel='stylesheet')
@@ -156,12 +157,15 @@ html(lang="en")
 		//- Customise which Bootstrap javascript files are served by including
 		//- them specifically here, instead of bootstrap-3.2.0.min.js
 		script(src='/js/lib/bootstrap/bootstrap-3.2.0.min.js')
+		//
+		//- Latest compiled and minified JavaScript
+		//- script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous")
 
 		// JS Plugins
+		//- script(src='/js/lib/owl.carousel.min.js')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/1.7.2/jquery.smooth-scroll.min.js')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.js')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js')
-		script(src='https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/peity/3.2.0/jquery.peity.min.js')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js')
 		
