changed backgorund image css

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -7,6 +7,7 @@ body {
 	background-image: url('../images/website-bg-white-small2.png');
 	background-repeat: no-repeat;
 	background-size: cover;
+	min-height: 1000px;
 	// margin-bottom: 220px;
 }
 
@@ -556,7 +557,7 @@ footer a {
 
 @media (max-width: @screen-xs-min) {
 	#footer {
-		background-color: #fff;
+		// background-color: #fff;
 		height: 165px;
 	}
 
