--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -156,10 +156,10 @@ html(lang="en")
 
 		//- Customise which Bootstrap javascript files are served by including
 		//- them specifically here, instead of bootstrap-3.2.0.min.js
-		script(src='/js/lib/bootstrap/bootstrap-3.2.0.min.js')
+		//- script(src='/js/lib/bootstrap/bootstrap-3.2.0.min.js')
 		//
 		//- Latest compiled and minified JavaScript
-		//- script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous")
+		script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous")
 
 		// JS Plugins
 		//- script(src='/js/lib/owl.carousel.min.js')
