--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -41,10 +41,10 @@ block content
 								| Noon - 1:00 pm on 770 KKOB AM				
 							hr
 							p.heading__sub.text-center
-								| Listen to our podcasts at:
+								| Listen Live Online:
 								.row
 									.col-sm-6.col-sm-offset-3
-										a(href="http://www.770kkob.com/podcasts/" target="_blank") 
+										a(href="http://player.listenlive.co/22401" target="_blank") 
 											img(src="/images/770kob.png", alt="770 KKOB-AM").img-responsive.btn-block
 							hr
 							p.heading__sub.question-mark 
@@ -124,76 +124,74 @@ block content
 						br
 						a(href="/images/ATP-sponsorship-packet.pdf" target='_blank').btn.btn-lg.btn-primary Become a sponsor
 	//- About Us Section
-	//- #team
-	//- 	.container
-	//- 		.row
-	//- 			.col-xs-12
-	//- 				h3.text-center Meet the team behind the talk
-	//- 				//- p.heading__sub
-	//- 
-	//- 		.row
-	//- 			.col-md-10.col-md-offset-1
-	//- 				.row
-	//- 					.col-sm-6
-	//- 						.team__item
-	//- 							.team-item__img
-	//- 								img.btn-block.img-responsive(src='img/team_1.jpg', alt='...')
-	//- 							.row
-	//- 								.col-md-6
-	//- 									.team-item__name Jasper Matthews M.Ed.
-	//- 									.team-item__position Host/Executive Producer
-	//- 								.col-md-6
-	//- 									.team-item__contact
-	//- 										a.team-item-contact__link(href='#')
-	//- 											i.fa.fa-twitter
-	//- 										a.team-item-contact__link.team-item-contact__link_facebook(href='#')
-	//- 											i.fa.fa-facebook
-	//- 										.clearfix
-	//- 					.col-sm-6
-	//- 						.team__item
-	//- 							.team-item__img
-	//- 								img.btn-block.img-responsive(src='img/team_2.jpg', alt='...')
-	//- 							.row
-	//- 								.col-md-6
-	//- 									.team-item__name Keisha Matthews M.Ed.
-	//- 									.team-item__position Host/Executive Producer
-	//- 								.col-md-6
-	//- 									.team-item__contact
-	//- 										a.team-item-contact__link(href='#')
-	//- 											i.fa.fa-twitter
-	//- 										a.team-item-contact__link.team-item-contact__link_facebook(href='#')
-	//- 											i.fa.fa-facebook
-	//- 										.clearfix
-	//- 					.col-sm-6
-	//- 						.team__item
-	//- 							.team-item__img
-	//- 								img.btn-block.img-responsive(src='img/team_3.jpg', alt='...')
-	//- 							.row
-	//- 								.col-md-6
-	//- 									.team-item__name Danielle Provo
-	//- 									.team-item__position Producer
-	//- 								.col-md-6
-	//- 									.team-item__contact
-	//- 										a.team-item-contact__link(href='#')
-	//- 											i.fa.fa-twitter
-	//- 										a.team-item-contact__link.team-item-contact__link_facebook(href='#')
-	//- 											i.fa.fa-facebook
-	//- 										.clearfix
-	//- 					.col-sm-6
-	//- 						.team__item
-	//- 							.team-item__img
-	//- 								img.btn-block.img-responsive(src='img/team_1.jpg', alt='...')
-	//- 							.row
-	//- 								.col-md-6
-	//- 									.team-item__name Denise Garcia
-	//- 									.team-item__position Producer
-	//- 								.col-md-6
-	//- 									.team-item__contact
-	//- 										a.team-item-contact__link(href='#')
-	//- 											i.fa.fa-twitter
-	//- 										a.team-item-contact__link.team-item-contact__link_facebook(href='#')
-	//- 											i.fa.fa-facebook
-	//- 										.clearfix
+	#team
+		.container
+			.row
+				.col-xs-12
+					h3.text-center Meet the team behind the talk
+					//- p.heading__sub	
+			.row
+				.col-md-10.col-md-offset-1
+					.row
+						.col-lg-3.col-sm-6.col-xs-8.col-xs-offset-2.col-sm-offset-0
+							.team__item
+								a#jmbutton(role='button' data-toggle='collapse' href='#jmbio' aria-expanded="false" aria-controls='collapseExample')
+									.team-item__img
+										img.btn-block.img-responsive(src='images/JM Individual.jpg', alt='Photo of Jasper Matthews')
+								.row
+									.col-xs-6
+										.team-item__name Jasper Matthews M.Ed.
+										.team-item__position Host/Executive Producer
+									.col-xs-6
+										.team-item__contact
+											a.team-item-contact__link(href='mailto:jmatthews@thegreatacademy.org')
+												i.fa.fa-envelope-o
+											.clearfix
+						.col-lg-9.col-sm-6.col-xs-8.col-xs-offset-2.col-sm-offset-0
+							#jmbio.collapse
+								.well
+									h2 Jasper Matthews M.Ed. - Host/Executive Producer
+									p 
+									| Jasper obtained a BA in both Sociology and African American Studies from the University of New Mexico in 1998. He received an MA in K-12 Special Education from the College of Santa Fe - Albuquerque in 2002. His program and Master's Thesis centered on charter administration and management. He is currently a PhD candidate in Educational Leadership at Capella University. His research focus is Response to Intervention (RtI), school reform and closing the achievement gap. During his six years of administrative experience, he served as the Assistant Principal of Valencia High School, Assistant Principal of Horizon Academy Northwest Charter School, Assistant Principal at Armijo Elementary School and served as the Dean of Students at Horizon Academy South. Jasper has been in education a total of 18 years and has served as an Educational Assistant, Special Education Teacher, Dean of Students, Assistant Principal and Director/Principal. In addition, Jasper is the Founder/Executive Director of The GREAT Academy – Albuquerque, which is in its fifth successful year.
+						.col-lg-3.col-sm-6.col-xs-8.col-xs-offset-2.col-sm-offset-0
+							.team__item
+								.team-item__img
+									img.btn-block.img-responsive(src='images/KM Individual.jpg', alt='Photo of Keisha Matthews')
+								.row
+									.col-xs-6
+										.team-item__name Keisha Matthews M.Ed.
+										.team-item__position Host/Executive Producer
+									.col-xs-6
+										.team-item__contact
+											a.team-item-contact__link(href='mailto:kmatthews@thegreatacademy.org')
+												i.fa.fa-envelope-o
+											.clearfix
+						.col-lg-3.col-sm-6.col-xs-8.col-xs-offset-2.col-sm-offset-0
+							.team__item
+								.team-item__img
+									img.btn-block.img-responsive(src='images/DP Individual.jpg', alt='Photo of Danielle Provo')
+								.row
+									.col-xs-6
+										.team-item__name Danielle Provo
+										.team-item__position Producer
+									.col-xs-6
+										.team-item__contact
+											a.team-item-contact__link(href='mailto:dprovo@thegreatacademy.org')
+												i.fa.fa-envelope-o
+											.clearfix
+						.col-lg-3.col-sm-6.col-xs-8.col-xs-offset-2.col-sm-offset-0
+							.team__item
+								.team-item__img
+									img.btn-block.img-responsive(src='images/DG Individual.jpg', alt='Photo of Denise Garcia')
+								.row
+									.col-xs-6
+										.team-item__name Denise Garcia
+										.team-item__position Producer
+									.col-xs-6
+										.team-item__contact
+											a.team-item-contact__link(href='mailto:degarcia@thegreatacademy.org')
+												i.fa.fa-envelope-o
+											.clearfix
 	.container
 		.row.padding
 			//- Login and under Construction section
